# SQL-Insepector

./: requirements.txt
sql-package/: README.md  pyproject.toml
sql-package/list-sql-queries/: middleware.py
sqlmiddleware/: asgi.py  settings.py  urls.py  wsgi.py
sqlquery/: factory.py  middleware.py  models.py  urls.py  views.py
sqlquery/migrations/: 0001_initial.py
